spacing issue on internet CV when adding spaces after the code blocks

--- a/media/cv-screen.css
+++ b/media/cv-screen.css
@@ -87,8 +87,8 @@ ul {
 	position: relative;
 	left: 25%;
 	width: 65%;
-	margin-bottom: 1.5em;
-	margin-top: 1em;
+	margin-bottom: 1.0em;
+	margin-top: 0.5em;
   columns: 3;
   -webkit-columns: 3;
   -moz-columns: 3;
